cambio de nombre de la rueda de carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -144,7 +144,7 @@
                     <td>
                       <img
                         class="img-producto"
-                        src="../img/711QBWwnYhL._AC_SX466__clipdrop-background-removal.png"
+                        src="../img/ruedaCamioneta.png"
                         alt="imagen del producto"
                       />
                     </td>
