cambio redaccion de texto producto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -167,9 +167,7 @@
           <div class="row">
             <article class="col-lg-8">
               <h5 class="display-5 text-center">
-                Tenemos para todos los autos y motos a un precio muy bajo,
-                nuestras increibles ruedas son exportadas por todo el mundo, en
-                especial Europa, Estados Unidos, Tokio y más lugares.
+                Tenemos el neumático que buscas, a un precio inigualable. Nuestras ruedas son exportadas a todo el mundo, siendo Europa, USA y Tokio, nuestros principales clientes
               </h5>
             </article>
             <div class="col-lg-4 anuncioPC">
