corregido logo no lleva index

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               class="btn btn-outline-success me-2 btn-nav"
               title="Registrarse"
             >
-              <a class="page-link" href=".pages/registro.html"
+              <a class="page-link" href="./pages/registro.html"
                 ><i class="bi bi-person-add"></i
               ></a>
             </button>
