--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -74,7 +74,7 @@
             <button class="btn btn-outline-success me-2 btn-nav" title="Iniciar sesion">
               <i class="bi bi-box-arrow-in-right"></i>
             </button>
-            <button class="btn btn-outline-success me-2 btn-nav" title="Registrarse">
+            <button class="btn btn-outline-success me-2 btn-nav" title="Registrarse" href="./registro.html">
               <i class="bi bi-person-add"></i>
             </button>
             <button class="btn btn-outline-success btn-nav active" title="Carrito">
