--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
     <header>
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img class="img-fluid logo" src="../img/logo.png" alt=""
           /></a>
           <button
@@ -83,7 +83,7 @@
               class="btn btn-outline-success me-2 btn-nav"
               title="Registrarse"
             >
-              <a class="page-link" href=".registro.html"
+              <a class="page-link" href="./registro.html"
                 ><i class="bi bi-person-add"></i
               ></a>
             </button>
