--- a/pages/productos.html
+++ b/pages/productos.html
@@ -31,7 +31,7 @@
     <header>
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img class="img-fluid logo" src="../img/logo.png" alt=""
           /></a>
           <button
