--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>Rolling Neumaticos</title>
   </head>
@@ -52,7 +60,7 @@
                 <a class="nav-link" href="./pages/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/error404.html">Nosotros</a>
+                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
               </li>
 
               <li class="nav-item">
