--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -17,6 +17,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/carrito.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Carrito de compra</title>
@@ -50,14 +54,14 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/productos.html">Productos</a>
+                <a class="nav-link" href="./productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/error404.html">Nosotros</a>
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex m-lg-4" role="search">
